gateway.yaml
---
# Gateway Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayserver
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
      - name: gatewayserver
        image: vietquoc2408/gatewayserver-oralie:latest
        ports:
        - containerPort: 8072
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8072
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8072
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 800Mi
        volumeMounts:
        - name: opentelemetry-javaagent
          mountPath: /etc/opentelemetry-javaagent.jar
      volumes:
      - name: opentelemetry-javaagent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayserver
  namespace: oralie-system
spec:
  selector:
    app: gatewayserver
  ports:
  - port: 8072
    targetPort: 8072
