infrastructure.yaml
---
# Config Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
      - name: configserver
        image: vietquoc2408/configserver-oralie:latest
        ports:
        - containerPort: 8071
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8071
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8071
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 800Mi
        volumeMounts:
        - name: opentelemetry-javaagent
          mountPath: /etc/opentelemetry-javaagent.jar
      volumes:
      - name: opentelemetry-javaagent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: configserver
  namespace: oralie-system
spec:
  selector:
    app: configserver
  ports:
  - port: 8071
    targetPort: 8071
---
# Eureka Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: vietquoc2408/eurekaserver-oralie:latest
        ports:
        - containerPort: 8070
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8070
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8070
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 800Mi
        volumeMounts:
        - name: opentelemetry-javaagent
          mountPath: /etc/opentelemetry-javaagent.jar
      volumes:
      - name: opentelemetry-javaagent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver
  namespace: oralie-system
spec:
  selector:
    app: eurekaserver
  ports:
  - port: 8070
    targetPort: 8070
