kafka.yaml
---
# Zookeeper
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: debezium/zookeeper:2.7.3.Final
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: oralie-system
spec:
  selector:
    app: zookeeper
  ports:
  - port: 2181
    targetPort: 2181
---
# Kafka
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.5.0
        ports:
        - containerPort: 9092
        - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: oralie-system
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    name: internal
    targetPort: 9092
  - port: 29092
    name: external
    targetPort: 29092
---
# Kafka UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: oralie-system
spec:
  selector:
    app: kafka-ui
  ports:
  - port: 8080
    targetPort: 8989
---
# Debezium
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium
  namespace: oralie-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium
  template:
    metadata:
      labels:
        app: debezium
    spec:
      containers:
      - name: debezium
        image: debezium/connect:2.5
        ports:
        - containerPort: 9083
        volumeMounts:
        - name: connector-configs
          mountPath: /kafka/connect
      volumes:
      - name: connector-configs
        configMap:
          name: connector-configs
---
apiVersion: v1
kind: Service
metadata:
  name: debezium
  namespace: oralie-system
spec:
  selector:
    app: debezium
  ports:
  - port: 8083
    targetPort: 9083
