ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oralie-ingress
  namespace: oralie-system
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: oralie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: api.oralie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewayserver
            port:
              number: 8072
  - host: keycloak.oralie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  - host: kafka-ui.oralie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
  - host: pgadmin.oralie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
